--- a/miaw-miaww.html
+++ b/miaw-miaww.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Profil Lucu & Galeri</title>
+  <title>miaw-miaww⚡</title>
   <style>
     :root {
       --bg-light: #f4f4f9;
